--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,6 +1,7 @@
 VERSION HISTORY:
 ----------------
 v0.41.20-git
++ Issue: Pilot/Crew not damaged reports did not have subject id set
 
 v0.41.19 (2016-06-05 22:40 UTC)
 + Issue #233: NPE Displaying Client Options when no skins present
