+ Issue #243: PSR issues related to high/low gravity

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,6 +7,7 @@ v0.41.20-git
 + Issue: Pilot/Crew not damaged reports did not have subject id set
 + Issue #242: Unit Can Self Destruct and Stackpole in same turn
 + Issue #236: PSR Terrain modifiers added inappropriately
++ Issue #243: PSR issues related to high/low gravity
 
 
 v0.41.19 (2016-06-05 22:40 UTC)
