--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -9,6 +9,7 @@ v0.41.20-git
 + Issue #236: PSR Terrain modifiers added inappropriately
 + Issue #243: PSR issues related to high/low gravity
 + Issue #241: Dropship Cannot Eject w/o expending all velocity
++ Issue #244: Added TigerShark's alternative Pilot Skill BV mod table to docs
 
 
 v0.41.19 (2016-06-05 22:40 UTC)
