--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -202,7 +202,7 @@ GameOptionsInfo.option.geometric_mean_bv.description=If checked, BV will be comp
 GameOptionsInfo.option.reduced_overheat_modifier_bv.displayableName=(Unofficial) Increase overheating penalty in BV calculations
 GameOptionsInfo.option.reduced_overheat_modifier_bv.description=If checked, BV modifier for weapons exceeding heat efficiency will be at 0.1, instead of normal 0.5
 GameOptionsInfo.option.alternate_pilot_bv_mod.displayableName=(Unofficial) Alternate Pilot Skill BV Mod
-GameOptionsInfo.option.alternate_pilot_bv_mod.description=If checked, uses an alternate Piloting BV Mod table devised by TigerShark: http://bg.battletech.com/forums/index.php/topic,30779.0.html
+GameOptionsInfo.option.alternate_pilot_bv_mod.description=If checked, uses an alternate Piloting BV Mod table devised by TigerShark, see docs/alternativePilotSkillBV.txt for details
 
 
 GameOptionsInfo.group.advancedCombat.displayableName=Advanced Combat
