--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -12,6 +12,7 @@ v0.41.20-git
 + Issue #244: Added TigerShark's alternative Pilot Skill BV mod table to docs
 + Issue #245: Smoke & chaff from weapons fire appears in end phase
 + Bug: EntityWeightClass.getWeightClass missing entry for hydrofoil support vees
++ Issue #253: UnitDisplay Extras tab now display # of doors for small craft bays
 
 
 v0.41.19 (2016-06-05 22:40 UTC)
