+ Data: New Sprites and Mechfile fixes

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -13,6 +13,8 @@ v0.41.20-git
 + Issue #245: Smoke & chaff from weapons fire appears in end phase
 + Bug: EntityWeightClass.getWeightClass missing entry for hydrofoil support vees
 + Issue #253: UnitDisplay Extras tab now display # of doors for small craft bays
++ Data: New Sprites and Mechfile fixes
++ Data: New Map (Thanks mikecj)
 
 
 v0.41.19 (2016-06-05 22:40 UTC)
