--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1726,6 +1726,13 @@ RandomArmyDialog.colBV=BV
 RandomArmyDialog.colMove=Movement
 RandomArmyDialog.ratStatusLoading=Loading RATs...
 RandomArmyDialog.ratStatusDoneLoading=All RATs Loaded
+RandomArmyDialog.RATGentab=RAT Generator
+RandomArmyDialog.Faction=Faction:
+RandomArmyDialog.Command=Command:
+RandomArmyDialog.UnitType=Unit Type:
+RandomArmyDialog.WeightClass=Weight Class:
+RandomArmyDialog.Rating=Rating:
+RandomArmyDialog.Generate=Generate
 RandomMapDialog.mountainPlain=Plain
 RandomMapDialog.volcanoExtinct=Volcano, Extinct
 RandomMapDialog.volcanoDormant=Volcano, Dormant
