+Added functionality to unit type, weight class, and rating comboboxes for RAT generator.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1731,6 +1731,12 @@ RandomArmyDialog.Faction=Faction:
 RandomArmyDialog.Command=Command:
 RandomArmyDialog.UnitType=Unit Type:
 RandomArmyDialog.WeightClass=Weight Class:
+RandomArmyDialog.Light=Light
+RandomArmyDialog.Medium=Medium
+RandomArmyDialog.Heavy=Heavy
+RandomArmyDialog.Assault=Assault
+RandomArmyDialog.Small=Small
+RandomArmyDialog.Large=Large
 RandomArmyDialog.Rating=Rating:
 RandomArmyDialog.Generate=Generate
 RandomMapDialog.mountainPlain=Plain
