+Implemented RAT generation in RandomArmyDialog.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1724,6 +1724,7 @@ RandomArmyDialog.title=Create a random army...
 RandomArmyDialog.colUnit=Name
 RandomArmyDialog.colBV=BV
 RandomArmyDialog.colMove=Movement
+RandomArmyDialog.colWeight=Weight
 RandomArmyDialog.ratStatusLoading=Loading RATs...
 RandomArmyDialog.ratStatusDoneLoading=All RATs Loaded
 RandomArmyDialog.RATGentab=RAT Generator
