+Allow generation of RAT based on mission role.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1740,6 +1740,54 @@ RandomArmyDialog.Small=Small
 RandomArmyDialog.Large=Large
 RandomArmyDialog.Rating=Rating:
 RandomArmyDialog.Generate=Generate
+MissionRole.recon=Reconnaissance
+MissionRole.raider=Raider
+MissionRole.incindiary=Incindiary
+MissionRole.ew\ support=EW Support
+MissionRole.artillery=Artillery
+MissionRole.missile\ artillery=Missile Artillery
+MissionRole.apc=APC
+MissionRole.training=Training
+MissionRole.cargo=Cargo
+MissionRole.support=Support
+MissionRole.civilian=Civilian
+MissionRole.fire\ support=Fire Support
+MissionRole.urban=Urban
+MissionRole.spotter=Artillery Spotter
+MissionRole.anti\ aircraft=Anti-Aircraft
+MissionRole.anti\ infantry=Anti-Infantry
+MissionRole.inf\ support=Infantry Support
+MissionRole.cavalry=Cavalry
+MissionRole.specops=Spec Ops
+MissionRole.engineer=Engineer
+MissionRole.minesweeper=Minesweeper
+MissionRole.minelayer=Minelayer
+MissionRole.bomber=Bomber
+MissionRole.escort=Escort
+MissionRole.interceptor=Interceptor
+MissionRole.ground\ support=Ground Support
+MissionRole.strike=Strike
+MissionRole.assault=Assault
+MissionRole.mech\ carrier=Mek Carrier
+MissionRole.asf\ carrier=Fighter Carrier
+MissionRole.vee\ carrier=Vehicle Carrier
+MissionRole.infantry\ carrier=Infantry Carrier
+MissionRole.ba\ carrier=BattleArmor Carrier
+MissionRole.troop\ carrier=Troop Carrier
+MissionRole.tug=Tug
+MissionRole.pocket\ warship=Pocket Warship
+MissionRole.corvette=Corvette
+MissionRole.destroyer=Destroyer
+MissionRole.frigate=Frigate
+MissionRole.cruiser=Cruiser
+MissionRole.battleship=Battleship
+MissionRole.mechanized\ ba=Mechanized BA
+MissionRole.marine=Marine
+MissionRole.mountaineer=Mountaineer
+MissionRole.xct=XCT
+MissionRole.paratrooper=Paratrooper
+MissionRole.anti\ mek=Anti-Mek
+MissionRole.field\ gun=Field Gun
 RandomMapDialog.mountainPlain=Plain
 RandomMapDialog.volcanoExtinct=Volcano, Extinct
 RandomMapDialog.volcanoDormant=Volcano, Dormant
