+Allow generation of RATs using multiple weight classes. +Add weight class criteria to large craft, BA, and Protos.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1731,14 +1731,25 @@ RandomArmyDialog.RATGentab=RAT Generator
 RandomArmyDialog.Faction=Faction:
 RandomArmyDialog.Command=Command:
 RandomArmyDialog.UnitType=Unit Type:
-RandomArmyDialog.WeightClass=Weight Class:
-RandomArmyDialog.Light=Light
-RandomArmyDialog.Medium=Medium
-RandomArmyDialog.Heavy=Heavy
-RandomArmyDialog.Assault=Assault
-RandomArmyDialog.Small=Small
-RandomArmyDialog.Large=Large
+RandomArmyDialog.WeightClass=Weight Class
+RandomArmyDialog.Mixed=Mixed
+RandomArmyDialog.weight_class_0=PA(L)
+RandomArmyDialog.weight_class_1=Light
+RandomArmyDialog.weight_class_2=Medium
+RandomArmyDialog.weight_class_3=Heavy
+RandomArmyDialog.weight_class_4=Assault
+RandomArmyDialog.weight_class_5=Colossal
+RandomArmyDialog.weight_class_7=Small
+RandomArmyDialog.weight_class_8=Medium
+RandomArmyDialog.weight_class_9=Large
+RandomArmyDialog.weight_class_10=Small
+RandomArmyDialog.weight_class_11=Large
 RandomArmyDialog.Rating=Rating:
+RandomArmyDialog.MissionRole=Mission/Role
+RandomArmyDialog.Strictness=Strictness:
+RandomArmyDialog.Low=Low
+RandomArmyDialog.Medium=Medium
+RandomArmyDialog.High=High
 RandomArmyDialog.Generate=Generate
 MissionRole.recon=Reconnaissance
 MissionRole.raider=Raider
