+RAT generator can filter for C3 network capabilities. +NPE when generating unit type that does not have a weight distribution value.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1750,6 +1750,19 @@ RandomArmyDialog.Strictness=Strictness:
 RandomArmyDialog.Low=Low
 RandomArmyDialog.Medium=Medium
 RandomArmyDialog.High=High
+RandomArmyDialog.Network=Network
+RandomArmyDialog.NoNetwork=None Required
+RandomArmyDialog.C3S=C3 Slave
+RandomArmyDialog.C3M=C3 Master
+RandomArmyDialog.C3I=C3i
+RandomArmyDialog.C3SB=C3 Boosted Slave
+RandomArmyDialog.C3MB=C3 Boosted Master
+RandomArmyDialog.C3CC=Company Command
+RandomArmyDialog.C3CCB=Boosted Company Command
+RandomArmyDialog.C3BA=C3
+RandomArmyDialog.C3BAB=C3 Boosted
+RandomArmyDialog.C3N=Naval C3
+RandomArmyDialog.Nova=Nova CEWS
 RandomArmyDialog.Generate=Generate
 MissionRole.recon=Reconnaissance
 MissionRole.raider=Raider
