--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1763,6 +1763,23 @@ RandomArmyDialog.C3BA=C3
 RandomArmyDialog.C3BAB=C3 Boosted
 RandomArmyDialog.C3N=Naval C3
 RandomArmyDialog.Nova=Nova CEWS
+RandomArmyDialog.Motive.Hover=Hover
+RandomArmyDialog.Motive.Tracked=Tracked
+RandomArmyDialog.Motive.Wheeled=Wheeled
+RandomArmyDialog.Motive.WiGE=WiGE
+RandomArmyDialog.Motive.VTOL=VTOL
+RandomArmyDialog.Motive.Leg=Foot
+RandomArmyDialog.Motive.Jump=Jump
+RandomArmyDialog.Motive.Motorized=Motorized
+RandomArmyDialog.Motive.Hover=Hover
+RandomArmyDialog.Mech.Hover=Mech. Hover
+RandomArmyDialog.Mech.Tracked=Mech. Tracked
+RandomArmyDialog.Mech.Wheeled=Mech. Wheeled
+RandomArmyDialog.Motive.Aerodyne=Aerodyne
+RandomArmyDialog.Motive.Spheroid=Spheriod
+RandomArmyDialog.Motive.Naval=Displacement
+RandomArmyDialog.Motive.Hydrofoil=Hydrofoil
+RandomArmyDialog.Motive.Submarine=Submarine
 RandomArmyDialog.Generate=Generate
 MissionRole.recon=Reconnaissance
 MissionRole.raider=Raider
