+ Feature: Added "Swarmed" entry to unit tooltips
I noticed that the only way to tell if a unit was swarmed was from the
"SWARMED" status on the icon.  Right now, if multiple stacked units have
statuses, they can get overlapped.  I added an entry to the tool tip for
an entity, so it's easier to tell what is swarmed, and by what unit.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,6 +1,7 @@
 VERSION HISTORY:
 ----------------
 v0.41.21
++ Feature: Added "Swarmed" entry to unit tooltips
 
 v0.41.20
 + Data: Date fixes for units
