--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -19,6 +19,7 @@ v0.41.20
 + Issue #253: UnitDisplay Extras tab now display # of doors for small craft bays
 + Data: New Sprites and Mechfile fixes
 + Data: New Map (Thanks mikecj)
++ Bug: Keybinds for unit display didn't fully function
 
 v0.41.19 (2016-06-05 22:40 UTC)
 + Issue #233: NPE Displaying Client Options when no skins present
