+ Bug: +4 Ice PSR penalty applied to Hover/WiGE instead of not Hover/WiGE

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -4,6 +4,7 @@ v0.41.21
 + Feature: Added "Swarmed" entry to unit tooltips
 + Issue #275: Non-optimal paths planned in certain circumstances
 + Data New Sprites and some unit fixes.
++ Bug: +4 Ice PSR penalty applied to Hover/WiGE instead of not Hover/WiGE
 
 v0.41.20
 + Data: Date fixes for units
