+ Bug: Fixed error in blue shield failure report

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -43,7 +43,7 @@
 1216=<font color='0000FF'>End of nuclear resolution</font>
 1220=<font color='0000FF'>End of nuclear blast effects</font><newline>
 1230=<data>
-1240=<data> (<data>) needs to roll less than <data> to avoid Blue Shield Failure, rolls <data>: <msg:1241,1242>
+1240=<data> (<data>) needs to roll <data> or greater to avoid Blue Shield Failure, rolls <data>: <msg:1241,1242>
 1241=Blue Shield Field Dampener <font color='C00000'>fails</font>!
 1242=no effect
 
