--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -5,6 +5,7 @@ v0.41.21
 + Issue #275: Non-optimal paths planned in certain circumstances
 + Data New Sprites and some unit fixes.
 + Bug: +4 Ice PSR penalty applied to Hover/WiGE instead of not Hover/WiGE
++ Bug: Fixed error in blue shield failure report
 
 v0.41.20
 + Data: Date fixes for units
