--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,6 +7,7 @@ v0.41.21
 + Bug: +4 Ice PSR penalty applied to Hover/WiGE instead of not Hover/WiGE
 + Bug: Fixed error in blue shield failure report
 + Issue #280: Adding snow theme to default tileset
++ Issue #264: Dropship.isLocationProhibited Error
 
 v0.41.20
 + Data: Date fixes for units
