--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -9,6 +9,7 @@ v0.41.21
 + Issue #280: Adding snow theme to default tileset
 + Bug: Fixing some weight issues causing units to fail.
 + Issue #264: Dropship.isLocationProhibited Error
++ Issue #262: Unloaded ammo in ATMs and MMLs can cause NPEs
 
 v0.41.20 (2016-06-27 02:00)
 + Data: Date fixes for units
