+ Issue #261: Host cannot deploy as observer if commander killed victory active

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -10,6 +10,7 @@ v0.41.21
 + Bug: Fixing some weight issues causing units to fail.
 + Issue #264: Dropship.isLocationProhibited Error
 + Issue #262: Unloaded ammo in ATMs and MMLs can cause NPEs
++ Issue #261: Host cannot deploy as observer if commander killed victory active
 
 v0.41.20 (2016-06-27 02:00)
 + Data: Date fixes for units
