--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -314,6 +314,7 @@ ChatLounge.ChangeOwner=Change Owner
 ChatLounge.ChooseBotName=Choose Bot Name
 ChatLounge.Command=Command: 
 ChatLounge.CustomMapSize=Custom size, use Map size button
+ChatLounge.CustomizeUnits=Customize Units
 ChatLounge.deploysAfterRound=Deploy before round 
 ChatLounge.deploysAfterZone=\ in Zone\ 
 ChatLounge.deploysOffBoard=Deploys off board
