--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -16,6 +16,7 @@ v0.41.21
 + Bug: Engine missing some engine types when determining if fusion.
 + Feature: Deployment tab in Custom Unit Dialog now works for multiple units
 + Feature: Custom Unit Dialog now saves/loads size (width and height)
++ Issue #132: ASF Altitude Bombing uses incorrect scatter pattern
 
 v0.41.20 (2016-06-27 02:00)
 + Data: Date fixes for units
