--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -17,6 +17,7 @@ v0.41.21
 + Feature: Deployment tab in Custom Unit Dialog now works for multiple units
 + Feature: Custom Unit Dialog now saves/loads size (width and height)
 + Issue #132: ASF Altitude Bombing uses incorrect scatter pattern
++ Bug: Manually shutdown units skipped during movement with option turned on
 
 v0.41.20 (2016-06-27 02:00)
 + Data: Date fixes for units
