Bug: Hotkeys not ignored in some cases (ie: scrolling when save menu is up)
Added BoardEditor.ignoreHotkeys, similar to how ClientGUI works.  I also made
it so that when any of the JTextFields have focus, the hotkeys are ignored.
This is most convenient for themes, however the problem is the user has to lose
focus from the JTextField, which may be counter-intuitive.  I may have to
revisit this later.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -19,6 +19,7 @@ v0.41.21
 + Issue #132: ASF Altitude Bombing uses incorrect scatter pattern
 + Bug: Manually shutdown units skipped during movement with option turned on
 + Feature: Custom Unit Dialog now remembers selected tab within session
++ Bug: Hotkeys not ignored in some cases (ie: scrolling when save menu is up)
 
 v0.41.20 (2016-06-27 02:00)
 + Data: Date fixes for units
