+ Feature: Added "Equipment" context menu in lounge, for burst MGs, hot loading and searchlights (Covers SF features #1399 and #1418)
Now, when units are right-clicked on, if relevant options are enabled, an
"Equipment" menu item is added and it will have submenus for setting the burst
state on MGs, hot loading on LRMs, and searchlights, if relevant.

This essentially adds a way to affect the Equipment tab in the custom unit
dialog, since editing equipment in that dialog is hairy for multiple units.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -21,6 +21,9 @@ v0.41.21
 + Feature: Custom Unit Dialog now remembers selected tab within session
 + Bug: Hotkeys not ignored in some cases (ie: scrolling when save menu is up)
 + Issue #195: Elevation incorrect when collapsing basement in lvl 1 building
++ Searchlights can no longer be removed from units with the searchlight quirk
++ Feature: Added "Equipment" context menu in lounge, for burst MGs, hot loading
+    and searchlights (Covers SF features #1399 and #1418)
 
 v0.41.20 (2016-06-27 02:00)
 + Data: Date fixes for units
