--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -322,9 +322,12 @@ ChatLounge.ExclusiveDeploy.title=Starting Position not allowed
 ChatLounge.ExclusiveDeploy.msg=In Double Blind play, you cannot choose 'Any' as starting position.
 ChatLounge.EntityListEntry1={0} ({1}/{2} pilot {3}{4}) Class: {5}{6}{7}{8}{9}{10}
 ChatLounge.EntityListEntry2={0} ({1}/{2} pilot {3}{4}) {5}{6} BV={7}{8}{9}{10}{11} {12}
+ChatLounge.Equipment=Equipment
 ChatLounge.GameYear=Game year:
 ChatLounge.GameYearLabelToolTip=<html>Current game year, used to determine tech levels.<br>This value can be changed in Game Options>Basic Options</html>
 ChatLounge.hidden=Hidden Unit
+ChatLounge.HotLoadToggleOff=Disable hotloading on all LRMs
+ChatLounge.HotLoadToggleOn=Hotload all LRMs
 ChatLounge.imDone=I'm Done
 ChatLounge.implants=\ implant(s)
 ChatLounge.ImproperCommand=Improper command
@@ -367,6 +370,10 @@ ChatLounge.quickView=Unit Quick View
 ChatLounge.OverlapDeploy.title=Must choose exclusive deployment zone
 ChatLounge.OverlapDeploy.msg=When using double blind, each player needs to have an exclusive deployment zone.
 ChatLounge.Quirks=Quirks: 
+ChatLounge.RapidFireToggleOn=Set all MGs to burst fire
+ChatLounge.RapidFireToggleOff=Set all MGs to single fire
+ChatLounge.SearchlightToggleOff=Remove searchlight(s)
+ChatLounge.SearchlightToggleOn=Add searchlight(s)
 ChatLounge.SelectBo=Please select a bot you control from the player list.
 ChatLounge.SelectBotOrPlayer=Please select a bot you control or your player from the player list.
 ChatLounge.SPACE=SPACE
