--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -24,6 +24,7 @@ v0.41.21
 + Searchlights can no longer be removed from units with the searchlight quirk
 + Feature: Added "Equipment" context menu in lounge, for burst MGs, hot loading
     and searchlights (Covers SF features #1399 and #1418)
++ Bug: UnitEditorDialog always sets critical hit on ASF life support
 
 v0.41.20 (2016-06-27 02:00)
 + Data: Date fixes for units
