Unit fixes and new sprites

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -29,6 +29,7 @@ v0.41.21
 + Issue #284: Null images returned for hexes and mechs
 + Bug: Superheavy meks should halve number of criticals for armor (and weren't)
 + Added Superheavy Gyro type for Superheavy meks
++ Unit fixes and new sprites
 
 v0.41.20 (2016-06-27 02:00)
 + Data: Date fixes for units
