--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -321,6 +321,7 @@
 3345=.
 3350=AMS engaged!\ 
 3351=APDS engaged (<data> modifier)!
+3352=<font color='008000'><B>hits</B></font> (AMS engaged! Reduced AV by <data>).
 3360=<data> missile(s) get through.
 3365=\ Attack deals zero damage.
 3370=<font color='008000'><B>hits</B></font> with <data> inferno missile(s).
