--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -5,6 +5,7 @@ v0.41.22-git
 + Bug: Clicking Walk from Jump, would still plot jumping movement
 + Issue #258: Added Next/Prev Weapon Mode keybinds
 + Issue #189: AMS mounted on ASFs do not fire on the ground map
++ Issue #133: ASF strikes can have multiple targets if target is a building
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
