--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1046,7 +1046,7 @@ KeyBinds.cmdNames.udExtras=Unit Display Extras Tab
 KeyBinds.cmdDesc.udExtras=Selects the Extras tab on the unit display
 KeyBinds.cmdNames.toggleJump=Toggle Jumping/Walking
 KeyBinds.cmdDesc.toggleJump=Switches between walking and jumping movement modes
-KeyBinds.cmdNames.nextMode=Next Weapopn Mode
+KeyBinds.cmdNames.nextMode=Next Weapon Mode
 KeyBinds.cmdDesc.nextMode=Selects the next mode for the selected weapon in the unit display weapon list.
 KeyBinds.cmdNames.prevMode=Previous Weapon Mode
 KeyBinds.cmdDesc.prevMode=Selects the previous mode for the selected weapon the unit display weapon list.
