--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -10,6 +10,7 @@ v0.41.22-git
 + Issue #138: Jumping into Water and Falling deals incorrect damage
 + Issue #70: Terrain Factor Damage for Engine Explosions and Ammo Explosions
 + Issue #300: Ground to Air fire Causing Accidental Fire Check
++ Issue #303: Reporting issues with misses on units in buildings
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
