Updated formatting for infantry in building damage
The report for no damage received wasn't indented properly, plus I also added
the Entity's display name, so it's clearer what unit isn't receiving damage.
Additionally, I intended both no damage and damage messages one level, so they
are indented under the Building absorbs report.

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -785,7 +785,7 @@
 6430=<font color='C00000'><data> (<data>) takes an additional critical hit, because it was hit by anti-TSM missiles this round.</font>
 6435=The building in the hex absorbs <data> damage from the bombs!
 6440=<data> takes no damage.
-6445=Infantry receives no damage.
+6445=<data> receives no damage.
 6450=<data> damage is passed on to <data>.
 6455=<data> is hit by falling debris for <data> damage.
 6460=<newline><data> collapses due to damage.
