--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -11,6 +11,8 @@ v0.41.22-git
 + Issue #70: Terrain Factor Damage for Engine Explosions and Ammo Explosions
 + Issue #300: Ground to Air fire Causing Accidental Fire Check
 + Issue #303: Reporting issues with misses on units in buildings
++ Feature: Non-Infantry Weapon Damage Against Infantry changes now reported
++ Bug [#4186]: Combat within building damage for infantry now correct
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
