Fixed IndexOutOfBoundsException in ChatLounge.customizeMechs
The selected tab for the CustomMechDialog was being set and saved in
ChatLounge.customizeMechs, however since the multi-unit selection only
has one tab, this doesn't make sense so I cut it out.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -11,6 +11,7 @@ v0.41.22-git
 + Issue #70: Terrain Factor Damage for Engine Explosions and Ammo Explosions
 + Issue #300: Ground to Air fire Causing Accidental Fire Check
 + Issue #303: Reporting issues with misses on units in buildings
++ Bug: Fixed IndexOutOfBoundsException in ChatLounge.customizeMechs
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
