--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -12,6 +12,7 @@ v0.41.22-git
 + Issue #300: Ground to Air fire Causing Accidental Fire Check
 + Issue #303: Reporting issues with misses on units in buildings
 + Bug: Fixed IndexOutOfBoundsException in ChatLounge.customizeMechs
++ Data New Sprites and some unit fixes. (Thanks SirMegaV)
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
