+ Adjusted building floor names during deployment; starts with ground floor
Previously, it would list Floor #, starting with one up until Top of the
building.  This could be confusing as Floor 1 => Elevation 0, Floor 2 =>
Elevation 1.  Now, Floor 1 is "Ground floor" and the floors after that
start with 1, so Floor # => Elevation #.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -863,6 +863,7 @@ DeploymentDisplay.Deploy=Deploy
 DeploymentDisplay.floor=Floor \#
 DeploymentDisplay.floorsDialog.message=What floor should {0} be placed on?
 DeploymentDisplay.floorsDialog.title=What floor?
+DeploymentDisplay.ground=Ground floor
 DeploymentDisplay.belowbridge=Below the bridge
 DeploymentDisplay.topbridge=On top of the bridge
 DeploymentDisplay.bridgeDialog.message=Where should {0} be placed?
