--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -13,6 +13,7 @@ v0.41.22-git
 + Issue #303: Reporting issues with misses on units in buildings
 + Feature: Non-Infantry Weapon Damage Against Infantry changes now reported
 + Bug [#4186]: Combat within building damage for infantry now correct
++ Adjusted building floor names during deployment; starts with ground floor
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
