Infantry damage from units on same building level
According to TW pg 175, units at the same level in the same building hex
should attack using "the normal weapon and physical attack rules," which
implies that the building should not absorb any damage.

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -1072,3 +1072,4 @@
 9973=Missile weapon against infantry, damage reduced from <data> to <data>
 9974=Burst-fire weapon against infantry, damage changed from <data> to <data>
 9975=Burst-fire weapon against infantry in building, damage changed from <data> to <data>
+9976=Building provides no protection when units are on the same level!
