Fixes #308: Incorrect heat when strafing with dropship bay weapons

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -14,6 +14,7 @@ v0.41.22-git
 + Bug: Fixed IndexOutOfBoundsException in ChatLounge.customizeMechs
 + Data New Sprites and some unit fixes. (Thanks SirMegaV)
 + Feature: Adding Default Key binds.txt for MegaMek Use.
++ Issue #308: Incorrect heat when strafing with dropship bay weapons
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
