New strings for infantry specializations

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -772,7 +772,8 @@ CustomMechDialog.labGunneryB=Gunnery (B):
 CustomMechDialog.labGunneryL=Gunnery (L): 
 CustomMechDialog.labGunneryM=Gunnery (M): 
 CustomMechDialog.labHidden=Hidden Unit:
-CustomMechDialog.labInfantryArmor=Infantry Armor 
+CustomMechDialog.labInfantryArmor=Infantry Armor
+CustomMechDialog.labInfSpec=Infantry Specializations
 CustomMechDialog.labInit=Initiative Bonus: 
 CustomMechDialog.labMountain=Mountain Infantry Training?
 CustomMechDialog.labName=Name: 
