--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -181,3 +181,28 @@ GAME_PHASE_DEPLOY_MINEFIELDS=Deploy Minefields
 GAME_PHASE_STARTING_SCENARIO=Start Scenario
 GAME_PHASE_SET_ARTYAUTOHITHEXES=Artillery Autohit Hex Selection
 
+Infantry.specialization0=Bridge-building Engineers
+Infantry.specialization1=Demolition Engineers
+Infantry.specialization2=Firefighting Engineers
+Infantry.specialization3=Minesweeping Engineers
+Infantry.specialization4=Sensor Engineers
+Infantry.specialization5=Trench/Fieldworks Engineers
+Infantry.specialization6=Marines
+Infantry.specialization7=Mountin Troops
+Infantry.specialization8=Paramedics
+Infantry.specialization9=Paratroops
+Infantry.specialization10=TAG Troops
+Infantry.specialization11=SCUBA
+
+Infantry.specializationTip0=Bridge-building Engineers
+Infantry.specializationTip1=Demolition Engineers
+Infantry.specializationTip2=Firefighting Engineers
+Infantry.specializationTip3=Minesweeping Engineers
+Infantry.specializationTip4=Sensor Engineers
+Infantry.specializationTip5=Trench/Fieldworks Engineers
+Infantry.specializationTip6=Marines
+Infantry.specializationTip7=Mountin Troops
+Infantry.specializationTip8=Paramedics
+Infantry.specializationTip9=Paratroops
+Infantry.specializationTip10=TAG Troops
+Infantry.specialization11=SCUBA
