Missed adding report for minesweeping engineers

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -131,6 +131,7 @@
 2240=<data> (<data>) is displaced into hex <data>, violating stacking with <data> (<data>).
 2245=<data> attempts to clear a(n) <data> mine in hex <data>:
 2246=<data> attempts to clear a(n) <data> mine in hex <data> with mine clearance manipulators:
+2247=<data> attempts to clear a(n) <data> mine in hex <data> with minesweeping engineers:
 2250=<data> needs <data>, rolls <data>: minefield cleared.
 2251=Minefield in hex <data> has density reduced by <data>!
 2252=Minefield in hex <data> cleared!
