Added infantry specializations to Entity tooltips

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -199,6 +199,7 @@ BoardView1.Tooltip.Adv1=<BR><FONT SIZE=-2 COLOR=#555555>&nbsp;&nbsp;1 Adv.;</FON
 BoardView1.Tooltip.ArmorInternals=Armor {0}; Internal {1}
 BoardView1.Tooltip.Armor=Armor: {0}
 BoardView1.Tooltip.Internals=Internal: {0}
+BoardView1.Tooltip.InfSpec=Specialization: {0}
 BoardView1.Tooltip.MD=<FONT SIZE=-2 COLOR=#555555>&nbsp;&nbsp;Manei Domini</FONT>
 BoardView1.Tooltip.Movement=Movement: {0}/{1}
 BoardView1.Tooltip.Evade=<BR><I><FONT COLOR=RED>(Evading)</FONT></I>
