Implemented Trench and Demo Engineers

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -483,6 +483,8 @@
 4260=, the DFA is an automatic hit (<data>), 
 4265=<data> (<data>) falls into hex <data>.
 4270=<data> (<data>) starts setting explosives.
+4271=<data> (<data>) continues setting explosives.
+4272=Demolition charges in <data> explode!
 4275=<data> (<data>) has finished setting explosives, creating a <data> point charge.
 4280=Tripping <data> (<data>)
 4285=, but the trip is impossible (<data>).
