Updated tooltip messages
Indicated which specializations aren't implemented and further detail for those
that are.

--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -188,21 +188,21 @@ Infantry.specialization3=Minesweeping Engineers
 Infantry.specialization4=Sensor Engineers
 Infantry.specialization5=Trench/Fieldworks Engineers
 Infantry.specialization6=Marines
-Infantry.specialization7=Mountin Troops
+Infantry.specialization7=Mountain Troops
 Infantry.specialization8=Paramedics
 Infantry.specialization9=Paratroops
 Infantry.specialization10=TAG Troops
 Infantry.specialization11=SCUBA
 
-Infantry.specializationTip0=Bridge-building Engineers
-Infantry.specializationTip1=Demolition Engineers
-Infantry.specializationTip2=Firefighting Engineers
-Infantry.specializationTip3=Minesweeping Engineers
-Infantry.specializationTip4=Sensor Engineers
-Infantry.specializationTip5=Trench/Fieldworks Engineers
-Infantry.specializationTip6=Marines
-Infantry.specializationTip7=Mountin Troops
-Infantry.specializationTip8=Paramedics
-Infantry.specializationTip9=Paratroops
-Infantry.specializationTip10=TAG Troops
-Infantry.specialization11=SCUBA
+Infantry.specializationTip0=Bridge-building Engineers (Unimplemented)
+Infantry.specializationTip1=Demolition Engineers are able to place charges in buildings during the physical phase, if the building is targeted for an attack.
+Infantry.specializationTip2=Firefighting Engineers (Unimplemented)
+Infantry.specializationTip3=Minesweeping Engineers have an easier time defusing minefields and accidentally explode mines less frequently.
+Infantry.specializationTip4=Sensor Engineers (Unimplemented)
+Infantry.specializationTip5=Trench/Fieldworks Engineers are able to build fortifications.
+Infantry.specializationTip6=Marines (Unimplemented)
+Infantry.specializationTip7=Mountain Troops are able to make larger elevation changes.
+Infantry.specializationTip8=Paramedics (Unimplemented)
+Infantry.specializationTip9=Paratroops (Unimplemented)
+Infantry.specializationTip10=TAG Troops (Unimplemented)
+Infantry.specialization11=SCUBA (Unimplemented)
