--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -21,6 +21,7 @@ v0.41.22-git
 + Issue #310: Tripod cockpit weight calculations
 + Issue #25: Added support for infantry specializations
 + Issue #238: Various issues with hidden units
++ Issue #305: Strange matches when a theme doesn't exist in the tileset
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
