Fixed mistake in properties file

--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -205,4 +205,4 @@ Infantry.specializationTip7=Mountain Troops are able to make larger elevation ch
 Infantry.specializationTip8=Paramedics (Unimplemented)
 Infantry.specializationTip9=Paratroops (Unimplemented)
 Infantry.specializationTip10=TAG Troops (Unimplemented)
-Infantry.specialization11=SCUBA (Unimplemented)
+Infantry.specializationTip11=SCUBA (Unimplemented)
