Fixes #160: Mechs switching hot-loading LRMs on/off during battle

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -249,7 +249,9 @@ GameOptionsInfo.option.tacops_partial_cover.description=If checked,\n1/4 and 3/4
 GameOptionsInfo.option.tacops_ba_criticals.displayableName=TacOps BA Critical hits
 GameOptionsInfo.option.tacops_ba_criticals.description=If checked,\nbattle armour suffer a critical hit if the same trooper is rolled twice.\n Critical hits instantly kill a trooper.
 GameOptionsInfo.option.tacops_hotload.displayableName=TacOps Hot-Loading
-GameOptionsInfo.option.tacops_hotload.description=If checked,\nplayer will beable to hot load ammo for LRM's and ATM's on thier Meks and Vehicles.
+GameOptionsInfo.option.tacops_hotload.description=If checked,\nplayer will be able to hot load ammo for LRM's and ATM's on their Meks and Vehicles.
+GameOptionsInfo.option.hotload_in_game.displayableName=(Unofficial) Meks can switch hot-loading mid-game
+GameOptionsInfo.option.hotload_in_game.description=If checked,\nplayer will be able to toggle hot loading ammo for LRM's and ATM's on their Meks in game.
 GameOptionsInfo.option.tacops_rapid_ac.displayableName=TacOps Rapidfire Autocannons
 GameOptionsInfo.option.tacops_rapid_ac.description=If checked Standard and Light Autocannons may fire as an Ultra Autocannons with an increased risk of jams and a chance of explosion.
 GameOptionsInfo.option.kind_rapid_ac.displayableName=(Unofficial) Kinder Rapidfire Autocannons
