--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -26,6 +26,7 @@ v0.41.22-git
 + Issue #145: Infantry unimpacted by fire in buildings if above HL1
 + Issue #313: Altitude bombing: Cannot bomb more than one hex
 + Issue #314: Dive bomb resolution shows blank after first attack during game
++ Issue #160: Mechs switching hot-loading LRMs on/off during battle
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
