--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -30,6 +30,8 @@ v0.41.22-git
 + Issue #315: Movement processing doesn't initialize current location, which
     could lead to skid checks not being made for turns on starting hex, or could
     lead to NPEs backing up over bridges
+ +Data: New Sprites (Infantry Project) and some new units. 
+ 	(Big Thanks to Bloodwolf for the often frustrating process.)
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
