Starting to add some references to missing MD Equipment. In progress.

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -593,12 +593,19 @@ PilotOptionsInfo.option.grappler.displayableName=Grappler/Electromagnet
 PilotOptionsInfo.option.grappler.description=Conventional Infantry units receive -2 bonus to swarm attacks.
 PilotOptionsInfo.option.pl_masc.displayableName=PL-MASC
 PilotOptionsInfo.option.pl_masc.description=Conventional Infantry units can go faster.
-PilotOptionsInfo.option.cyber_eye_im.displayableName=IR/EM Cybernetic Eye/Ear
-PilotOptionsInfo.option.cyber_eye_im.description=Conventional Infantry units receive 2-hex Active Probe.
-PilotOptionsInfo.option.mm_eye_im.displayableName=MM IR/EM Cybernetic Eye/Ear
-PilotOptionsInfo.option.mm_eye_im.description=Units receive benefits as described in JHS3072.
-PilotOptionsInfo.option.cyber_eye_tele.displayableName=Laser/Telescopic Cyber Eye
-PilotOptionsInfo.option.cyber_eye_tele.description=Conventional infantry units receive -1 to-hit with ranged weapons.
+
+PilotOptionsInfo.option.cyber_imp_audio.displayableName=Cybernetic Sensor Implant - Audio
+PilotOptionsInfo.option.cyber_imp_audio.description=Conventional Infantry units receive 2-hex Active Probe.
+
+
+PilotOptionsInfo.option.cyber_imp_visual.displayableName=Cybernetic Sensor Implant -Visual
+PilotOptionsInfo.option.cyber_imp_visual.description=Infantry units whose warriors are enhanced with laser-sight or telescopic optical implants receive a -1 to-hit modifier for all weapon attacks. .
+
+
+PilotOptionsInfo.option.mm_implants.displayableName=Multi-Modal Sensory Implants
+PilotOptionsInfo.option.mm_implants.description=See IO pg 79.
+
+
 PilotOptionsInfo.option.comm_implant.displayableName=Comm Implant
 PilotOptionsInfo.option.comm_implant.description=Non-stackable +1 to initiative.
 PilotOptionsInfo.option.boost_comm_implant.displayableName=Boosted Comm Implant
