+Option to filter out minor factions.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1739,6 +1739,7 @@ RandomArmyDialog.ratStatusDoneLoading=All RATs Loaded
 RandomArmyDialog.RATGentab=RAT Generator
 RandomArmyDialog.Faction=Faction:
 RandomArmyDialog.Command=Command:
+RandomArmyDialog.ShowMinorFactions=Show Minor Factions
 RandomArmyDialog.UnitType=Unit Type:
 RandomArmyDialog.WeightClass=Weight Class
 RandomArmyDialog.Mixed=Mixed
