--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -658,7 +658,8 @@ CommonSettingsDialog.useShadowMap=Show terrain and building shadows
 CommonSettingsDialog.levelHighlight=Level highlighting (thick borders at level changes)
 CommonSettingsDialog.floatingIso=Floating isometric (no hex sides in isometric mode)
 CommonSettingsDialog.mmSymbol=Use StratOps unit symbols in the Minimap
-CommonSettingsDialog.useSoftCenter=Use smooth transitioning between units on the board 
+CommonSettingsDialog.useSoftCenter=Use smooth transitioning when selecting units on the board
+CommonSettingsDialog.useSoftCenterTip=Instead of an instant snap, the view is smoothly transitioned
 ConfirmDialog.dontBother=Do not bother me again
 
 CustomBattleArmorDialog.title=Build your Battle Armor...
