+ Issue #180: Units now have a set draw order based on unit type.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -37,6 +37,8 @@ v0.41.22-git
 + Issue #306: Thread-safety issues in Princess.Precognition
 + Issue #223: ECM hex display not always updating, especially in deployment
 + Issue #180: Unit labels can now have a color border that correspondes to owner
++ Issue #180: Units now have a set draw order based on unit type.  Draw order:
+    Infantry, BA, Tank, Mech, VTOL, Aero
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
