--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -39,6 +39,7 @@ v0.41.22-git
 + Issue #180: Unit labels can now have a color border that correspondes to owner
 + Issue #180: Units now have a set draw order based on unit type.  Draw order:
     Infantry, BA, Tank, Mech, VTOL, Aero
++ Board background image can now be scaled instead of tiled
 
 v0.41.21 (2016-07-31 10:00 UTC)
 + Feature: Added "Swarmed" entry to unit tooltips
