--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1056,6 +1056,9 @@ KeyBinds.cmdNames.nextMode=Next Weapon Mode
 KeyBinds.cmdDesc.nextMode=Selects the next mode for the selected weapon in the unit display weapon list.
 KeyBinds.cmdNames.prevMode=Previous Weapon Mode
 KeyBinds.cmdDesc.prevMode=Selects the previous mode for the selected weapon the unit display weapon list.
+KeyBinds.cmdNames.toggleDrawLabels=Toggle Unit Labels
+KeyBinds.cmdDesc.toggleDrawLabels=Toggles between displaying and not displaying unit labels
+
 
 LOSDialog.inFirstHex=In first hex:
 LOSDialog.InSecondHex=In second hex:
