--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -4,6 +4,7 @@ v0.41.23-git
 + Issue #323: Artefacting drawing the boardview background
 + Bug: Bot would fire at hidden units
 + Added option to toggle displaying of unit labels, default key is Y
++ Bug: IllegalFormatConversionException in ASFBay.getUnusedString
 
 v0.41.22 (2016-08-26 03:00 UTC)
 + Issue #295: Roads not preventing swamp/rubble PSRs
