--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1770,6 +1770,7 @@ RandomArmyDialog.weight_class_11=Large
 RandomArmyDialog.Rating=Rating:
 RandomArmyDialog.MissionRole=Mission/Role
 RandomArmyDialog.Strictness=Strictness:
+RandomArmyDialog.Strictness.tooltip=How strongly the mission role effects unit frequency
 RandomArmyDialog.Low=Low
 RandomArmyDialog.Medium=Medium
 RandomArmyDialog.High=High
@@ -1804,54 +1805,102 @@ RandomArmyDialog.Motive.Naval=Displacement
 RandomArmyDialog.Motive.Hydrofoil=Hydrofoil
 RandomArmyDialog.Motive.Submarine=Submarine
 RandomArmyDialog.Generate=Generate
+RandomArmyDialog.Generate.tooltip=Create random assignment table from selected options
+RandomArmyDialog.AddFromRAT.tooltip=Add selected line to chosen units.
 MissionRole.recon=Reconnaissance
+MissionRole.recon.tooltip=Generally faster units, often equipped with special electronics.
 MissionRole.raider=Raider
-MissionRole.incindiary=Incindiary
-MissionRole.ew\ support=EW Support
+MissionRole.raider.tooltip=Faster units with little or no dependence on ammo.
+MissionRole.incindiary=Incendiary
+MissionRole.incindiary.tooltip=Has flamers or inferno-capable weapons.
+MissionRole.ew_support=EW Support
+MissionRole.ew_support.tooltip=Has a probe, ECM, or communications equipment.
 MissionRole.artillery=Artillery
-MissionRole.missile\ artillery=Missile Artillery
+MissionRole.artillery.tooltip=Only units with tube or missile artillery.
+MissionRole.missile_artillery=Missile Artillery
+MissionRole.missile_artillery.tooltip=Only units with missile artillery.
 MissionRole.apc=APC
+MissionRole.apc.tooltip=Infantry transport capacity
 MissionRole.training=Training
+MissionRole.training.tooltip=Preference for training variants 
 MissionRole.cargo=Cargo
+MissionRole.cargo.tooltip=Has cargo capacity
 MissionRole.support=Support
+MissionRole.support.tooltip=Units that are intended for various support roles rather than combat.
 MissionRole.civilian=Civilian
-MissionRole.fire\ support=Fire Support
+MissionRole.civilian.tooltip=Units typically operated by civilians rather than militaries
+MissionRole.fire_support=Fire Support
+MissionRole.fire_support.tooltip=Long-ranged weapons, including missile artillery.
 MissionRole.urban=Urban
+MissionRole.urban.tooltip=Designed for urban combat. 
 MissionRole.spotter=Artillery Spotter
-MissionRole.anti\ aircraft=Anti-Aircraft
-MissionRole.anti\ infantry=Anti-Infantry
-MissionRole.inf\ support=Infantry Support
+MissionRole.spotter.tooltip=Has target acquisition gear.
+MissionRole.anti_aircraft=Anti-Aircraft
+MissionRole.anti_aircraft.tooltip=Has special airborn targetting capacity or flak-capable weapons.
+MissionRole.anti_infantry=Anti-Infantry
+MissionRole.anti_infantry.tooltip=Has anti-personnel weapons.
+MissionRole.inf_support=Infantry Support
+MissionRole.inf_support.tooltip=Combination of anti-infantry weapons and infantry transport capabilities
 MissionRole.cavalry=Cavalry
+MissionRole.cavalry.tooltip=Strong emphasis on speed
 MissionRole.specops=Spec Ops
+MissionRole.specops.tooltip=Intended for a special operations role rather than general combat
 MissionRole.engineer=Engineer
+MissionRole.engineer.tooltip=Designed for construction or demolitions role.
 MissionRole.minesweeper=Minesweeper
+MissionRole.minesweeper.tooltip=Intended for clearing minefields.
 MissionRole.minelayer=Minelayer
+MissionRole.minelayer.tooltip=Equipped to create minefields.
 MissionRole.bomber=Bomber
+MissionRole.bomber.tooltip=Designed to carry and deliver bombs.
 MissionRole.escort=Escort
+MissionRole.escort.tooltip=Escort for large craft.
 MissionRole.interceptor=Interceptor
-MissionRole.ground\ support=Ground Support
-MissionRole.strike=Strike
+MissionRole.interceptor.tooltip=Dogfighter
+MissionRole.ground_support=Ground Support
+MissionRole.ground_support.tooltip=Intended for attacking ground targets.
 MissionRole.assault=Assault
-MissionRole.mech\ carrier=Mek Carrier
-MissionRole.asf\ carrier=Fighter Carrier
-MissionRole.vee\ carrier=Vehicle Carrier
-MissionRole.infantry\ carrier=Infantry Carrier
-MissionRole.ba\ carrier=BattleArmor Carrier
-MissionRole.troop\ carrier=Troop Carrier
+MissionRole.assault.tooltip=Emphasizes combat ability over transport.
+MissionRole.mech_carrier=Mek Carrier
+MissionRole.mech_carrier.tooltip=Has transport capacity for Meks
+MissionRole.asf_carrier=Fighter Carrier
+MissionRole.asf_carrier.tooltip=Has transport capacity for Aerospace fighters
+MissionRole.vee_carrier=Vehicle Carrier
+MissionRole.vee_carrier.tooltip=Has transport capacity for ground vehicles
+MissionRole.infantry_carrier=Infantry Carrier
+MissionRole.infantry_carrier.tooltip=Has transport capacity for infantry
+MissionRole.ba_carrier=BattleArmor Carrier
+MissionRole.ba_carrier.tooltip=Has transport capacity for BattleArmor
+MissionRole.troop_carrier=Troop Carrier
+MissionRole.troop_carrier.tooltip=Transport capacity for combined arms force
 MissionRole.tug=Tug
-MissionRole.pocket\ warship=Pocket Warship
+MissionRole.tug.tooltip=Can tow other ships
+MissionRole.pocket_warship=Pocket Warship
+MissionRole.pocket_warship.tooltip=Armed with capital weapons
 MissionRole.corvette=Corvette
+MissionRole.corvette.tooltip=Small ship for escort or raiding 
 MissionRole.destroyer=Destroyer
+MissionRole.destroyer.tooltip=Small to medium ship for escort or raiding
 MissionRole.frigate=Frigate
+MissionRole.frigate.tooltip=Medium ship, often with integral fighter support
 MissionRole.cruiser=Cruiser
+MissionRole.cruiser.tooltip=Mid-sized, heavily armed ship designed for extended operations
 MissionRole.battleship=Battleship
-MissionRole.mechanized\ ba=Mechanized BA
+MissionRole.battleship.tooltip=Large, very heavily armed Warship
+MissionRole.mechanized_ba=Mechanized BA
+MissionRole.mechanized_ba.tooltip=OmniMeks, OmniVehicles, or BattleArmor capable of riding on them.
 MissionRole.marine=Marine
+MissionRole.marine.tooltip=Can function in space.
 MissionRole.mountaineer=Mountaineer
+MissionRole.mountaineer.tooltip=Has special abilities in mountainous terrain.
 MissionRole.xct=XCT
+MissionRole.xct.tooltip=Xenoplanetary Conditioned-Trained, can function in hazardous environments.
 MissionRole.paratrooper=Paratrooper
-MissionRole.anti\ mek=Anti-Mek
-MissionRole.field\ gun=Field Gun
+MissionRole.paratrooper.tooltip=Trained for insertion from the air.
+MissionRole.anti_mek=Anti-Mek
+MissionRole.anti_mek.tooltip=Trained for anti-Mek options.
+MissionRole.field_gun=Field Gun
+MissionRole.field_gun.tooltip=Equipped with a heavy weapon.
 RandomMapDialog.mountainPlain=Plain
 RandomMapDialog.volcanoExtinct=Volcano, Extinct
 RandomMapDialog.volcanoDormant=Volcano, Dormant
