+Added option to select ultra-light Meks.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1756,7 +1756,7 @@ RandomArmyDialog.ShowMinorFactions=Show Minor Factions
 RandomArmyDialog.UnitType=Unit Type:
 RandomArmyDialog.WeightClass=Weight Class
 RandomArmyDialog.Mixed=Mixed
-RandomArmyDialog.weight_class_0=PA(L)
+RandomArmyDialog.weight_class_0=Ultralight/PA(L)
 RandomArmyDialog.weight_class_1=Light
 RandomArmyDialog.weight_class_2=Medium
 RandomArmyDialog.weight_class_3=Heavy
