+Changed weight class display name from colossal to superheavy, which is the term used in the IO rules.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1761,7 +1761,7 @@ RandomArmyDialog.weight_class_1=Light
 RandomArmyDialog.weight_class_2=Medium
 RandomArmyDialog.weight_class_3=Heavy
 RandomArmyDialog.weight_class_4=Assault
-RandomArmyDialog.weight_class_5=Colossal
+RandomArmyDialog.weight_class_5=Superheavy
 RandomArmyDialog.weight_class_7=Small
 RandomArmyDialog.weight_class_8=Medium
 RandomArmyDialog.weight_class_9=Large
