+Changed name of button that adds from RAT directly to force to avoid potential confusion of having two buttons with the same text in the same dialog. +Fixed some tech distribution in early ROS.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1806,7 +1806,8 @@ RandomArmyDialog.Motive.Hydrofoil=Hydrofoil
 RandomArmyDialog.Motive.Submarine=Submarine
 RandomArmyDialog.Generate=Generate
 RandomArmyDialog.Generate.tooltip=Create random assignment table from selected options
-RandomArmyDialog.AddFromRAT.tooltip=Add selected line to chosen units.
+RandomArmyDialog.AddToForce=Add to Force
+RandomArmyDialog.AddToForce.tooltip=Add selected line to chosen units.
 MissionRole.recon=Reconnaissance
 MissionRole.recon.tooltip=Generally faster units, often equipped with special electronics.
 MissionRole.raider=Raider
